[project]
dependencies = []
description = "Add your description here"
name = "observant"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[dependency-groups]
dev = [
  "assertpy>=1.1",
  "mkdocs-material>=9.6.14",
  "mkdocstrings[python]>=0.29.1",
  "pytest>=8.3.5",
  "pytest-sugar>=1.0.0",
]

[tool.pyright]
exclude = ["**/__pycache__", "**/.venv", "**/venv", "**/.mypy_cache"]
pythonVersion = "3.13"
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImplicitStringConcatenation = true
reportImportCycles = true
reportMissingSuperCall = false
reportMissingTypeStubs = false
reportPropertyTypeMismatch = true
reportShadowedImports = true
reportUninitializedInstanceVariable = true
reportUnknownMemberType = false
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = false
strictDictionaryInference = true
strictListInference = true
strictSetInference = true
typeCheckingMode = "strict"

[tool.ruff]
line-length = 180
